--- a/public/css/tempo.css
+++ b/public/css/tempo.css
@@ -16,7 +16,8 @@
 }
 
 .geomap path {
-    fill: #a2cbc7; }
+    fill: #a2cbc7;
+}
 
 .geomap path:hover {
     fill: #aabb00; }
@@ -44,8 +45,14 @@ font-size: 46px;
     min-height: 300px;
 }
 
-.eventBox {
-    border: solid 1px;
-    background-color: #a6e1ec;
+.hover-box {
+    border: solid 1px #cccccc;
+    -webkit-border-radius: 10px;
+    background-color: #f5f5f5;
     color: #000000;
+    position: absolute;
+    width: 300px;
+    height: 150px;
+    z-index: 1000;
 }
+
